Reformat using using clang-format, see .clang-format